<resources>
    <string name="app_name">Speech2ISL</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_tabbed">Speech TO ISL Translater</string>
    <string name="tab_text_1">Welcome</string>
    <string name="tab_text_2">Directions</string>
    <string name="tab_text_3">Translater</string>
    <string name="submit">Login</string>
    <string name="text_view">Hi , Please enter your details......</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Books</string>
    <string name="menu_slideshow">Make Notes</string>
    <string name="how_to_use_split_screen_mode_on_an_android_device">How to use split screen mode on an Android device?</string>
    <string name="step1">1. From your Home screen, tap on the Recent Apps button in the bottom left corner, which is represented by three vertical lines in a square shape.</string>
    <string name="step3">2. In Recent Apps, locate the app you want to use in split screen. Tap and hold on that app to open a menu. Keep in mind that some apps can\'t be used in split screen. 3. Once the menu has opened, tap on \"Open in split screen view.\"</string>
    <string name="step4">4. The app you selected will temporarily appear as a black bar on the top of the screen. Tap on the other app you want to use in split screen.The first app will wait at the top of the screen while you pick another app.</string>
    <string name="step55">5. Your apps will now appear in split screen, and you should be able to switch between the two of them seamlessly. They\'ll be separated by a black bar, similar to the one you saw in step 4.You can view one app while using another.</string>
    <string name="step6">6. When you\'re ready to close one of the apps and end the split screen, tap and hold on the black bar in the center of the screen, then swipe in the direction of the app you want to close. The screen will appear blue momentarily and the app will close.</string>
    <string name="button">button</string>
    <string name="string_button">buttontonavbar</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="signoutbutton">SIGN OUT</string>
    <string name="logoutbutton">LOGOUT</string>
    <string name="server_client_id">853535085382-tetlquc566bnde2b67iprnm5f05iiobl.apps.googleusercontent.com</string>
</resources>