<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CF4A72"

    >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/split_screen"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FF759F"

        android:fontFamily="@font/architects_daughter"
        android:text="@string/how_to_use_split_screen_mode_on_an_android_device"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/step1"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#54E864"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/step1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/split_screen" />

    <TextView
        android:id="@+id/step2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="#54E864"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/step3"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/step1" />

    <TextView
        android:id="@+id/step4"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#54E864"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/step4"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step2" />

    <TextView
        android:id="@+id/step5"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#54E864"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/step55"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step4" />

    <TextView
        android:id="@+id/step6"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#54E864"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/step6"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/step5" />

    <ImageButton
        android:id="@+id/imageButtongotonavbar"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:background="#54E864"
        android:contentDescription="@string/string_button"
        android:src="@android:drawable/ic_menu_sort_alphabetically"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step6"
        app:layout_constraintVertical_bias="0.114" />


</androidx.constraintlayout.widget.ConstraintLayout>
